# ai-ml-dl

./: README.bat.md  README.md  README_PythonAI.md  README_jupyternotebook.md  Readme_Quantum.md  Setup_Python_AI.ipynb  Stable Diffusion checkpoint  m6b45_dashboard_v3.ipynb  ollama-windows.ipynb
KNIMEBI_AionUI_OC_OD/: 5Tools-CreateAPP.md  AionUI + OpenCode Design Workflow.md  AionUI_OpenCode_Py_Tool_Strategy.md  AionUI_opencode_foundation.md  Design_AionUI_plus_OC_Flow.md  KNIME-SETUP-GUIDE.md  KNIMEBI_AIONUI_OC_OD_MCP_GUIDE.md  LPAI_Security_KTNB.md  README.md  ai-agent-tool.md  (+1 more)
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/: .env.example  README.md  pyproject.toml  requirements.txt
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/config/: knime.yaml  opendesign.yaml  powerbi_rs.yaml
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/scheduler/: pipeline_daily.py  register_task.ps1
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/scripts/: setup.ps1
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/skills/: knime-executor.md  open-design.md  powerbi-report-server.md
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/: main.py
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/models/: __init__.py  knime.py  opendesign.py  powerbi_rs.py
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/tools/knime/: __init__.py  config.py  executor.py  tools.py
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/tools/opendesign/: __init__.py  client.py  config.py  tools.py
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/tools/powerbi_rs/: __init__.py  client.py  config.py  tools.py
KNIMEBI_AionUI_OC_OD/mcp-unified-hub/src/utils/: __init__.py  config.py  logging.py
(+55 files in other folders)
