[project]
name = "mcp-unified-hub"
version = "1.0.0"
description = "Unified MCP integration hub: KNIME + Power BI RS + Open Design"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "httpx-ntlm>=1.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-hub = "src.main:main"
